# rustme

./: Cargo.toml  dockerfile
src/: lib.rs  main.rs
tests/: health_check.rs
